Update README with .deb instructions and simplify building