@@ -28,6 +28,7 @@ Some of this was built as part of a 24hr hackathon: IC Hack 20. The original rep
 
 ## Proposed Features
 
+- Mac OS support (Coming soon)
 - Tune and transpose audio output
 - Support rendering of multiple objects
 - (long term) Keyframing/animating objects and camera
@@ -65,14 +66,14 @@ Additional effects can be applied to the image such as:
 
 ## Running
 
-Head over to [Releases](https://github.com/jameshball/osci-render/releases) and download the latest `.exe` or `.jar`.
+Head over to [Releases](https://github.com/jameshball/osci-render/releases) and download the latest `.exe`, `.deb`, or `.jar`.
 
-`.exe` is highly recommended if you're on Windows as it is much simpler to get up and running.
+`.exe` or `.deb` is recommended, if possible, as it is simpler to get up and running.
 
 ### Running using .exe
 
 - Download the latest `osci-render-VERSION.exe` from [Releases](https://github.com/jameshball/osci-render/releases)
-- Open the `.exe` skipping any Windows security warnings (at your own risk!)
+- Open the `.exe` skipping any Windows security warnings
 - It should open briefly and then close without any user input
 - Check your start menu for `osci-render` or open `osci-render.exe` at `C:\Program Files\osci-render`
 - Start rendering!
@@ -81,17 +82,26 @@ Updating to later versions is as simple as running the latest `osci-render-VERSI
 
 To uninstall, use Windows control panel, as you would expect.
 
+### Running using .deb
+
+- Download the latest `osci-render_VERSION-1_amd64.deb` from [Releases](https://github.com/jameshball/osci-render/releases)
+- Install as usual, according to your distro
+  - e.g. on Ubuntu, just double click to open and choose software installer
+- After installing, you can execute `/opt/osci-render/bin/osci-render` to run!
+- Start rendering!
+
+Updating to later versions is as simple as running the latest `osci-render-VERSION.exe` again.
+
+To uninstall, use Windows control panel, as you would expect.
+
 ### Running using .jar
 
-- Download the latest `osci-render-VERSION.jar` from [Releases](https://github.com/jameshball/osci-render/releases)
+- Download the latest `osci-render-os-VERSION.jar` from [Releases](https://github.com/jameshball/osci-render/releases)
+  - Download the version that is relevant to your OS, otherwise the program will not open
+  - i.e. `osci-render-win-VERSION.jar` for Windows and `osci-render-unix-VERSION.jar` for Linux
 - Download and install [Java 16 or later](https://www.oracle.com/java/technologies/javase-jdk16-downloads.html)
-- Donwload and unpack [JavaFX 16 or later](https://gluonhq.com/products/javafx/)
-  - Make sure you scroll down to `Latest Release`
-  - Download the SDK for your platform
-  - Unpack the `.zip` at your root directory (e.g. `C:\javafx-sdk-16` for me on Windows)
-  - The `lib` subfolder should be located at `/javafx-sdk-16/lib`
-- Run the following command from your terminal to run the `.jar`, substituting the correct paths 
-- `java "-Dfile.encoding=UTF8" --module-path /javafx-sdk-16/lib --add-modules=javafx.controls,javafx.fxml -jar "PATH/TO/osci-render-VERSION.jar"`
+- Run the following command from your terminal to run the `.jar`, substituting the correct path to your `.jar` file 
+- `java "-Dfile.encoding=UTF8" -jar "PATH/TO/osci-render-os-VERSION.jar"`
 - Start rendering!
 
 ## Building
@@ -100,17 +110,10 @@ I am using Maven for dependency management and to package the program. Doing the
 
 - Download and install [Java 16 or later](https://www.oracle.com/java/technologies/javase-jdk16-downloads.html)
 - Run `git clone git@github.com:jameshball/osci-render.git`
-- `cd` into the `osci-render` directory
-- Run `mvn package`
 - Open the project in IntelliJ
-- Add `target/modules` as a library
-  - Right click the folder in IntelliJ and `Add as Library...`
-  - Select `osci-render` in the `Add to module` dropdown
-- Navigate to `File -> Project Structure`
-- Remove all external Maven libraries other than the `modules` folder just added
 - You're good to go!
 
-You should now be able to run `sh.ball.gui.Gui` and start the program 😊
+You should now be able to run `sh.ball.gui.Launcher` and start the program 😊
 
 ## Contact
 
